# coloring-book-generator

./: .env.example  .gitignore  OPTIMIZATION_ANALYSIS.md  README.md  REFACTORING_REPORT.md  TASK_C90F9B09_SUMMARY.md  TOOL_CONSOLIDATION_GUIDE.md  alembic.ini  animals.txt  conftest.py  genesis.yaml  pyproject.toml  requirements.txt
alembic/: env.py
docs/: AI_GENERATION_V2_EPIC.md  AI_INTEGRATION.md  ANALYTICS_DASHBOARD_REQUIREMENTS.md  PIPELINE_ARCHITECTURE.md  PRICING_STRATEGY.md  REVIEW_WORKFLOW_AI.md  ROADMAP_UPDATE_SUMMARY.md  V2_EPIC_IMPORT_DATA.json
frontend/: .argos-ci.js  .env.example  index.html  package-lock.json  package.json  playwright.config.ts  render-build.sh  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: __init__.py  generate_example.py
src/: animal_drawer.py
tests/: conftest.py  test_api_endpoints.py  test_auth_integration.py  test_batch_api_endpoints.py  test_batch_integration.py  test_batch_queue.py  test_batch_queue_optimized.py  test_batch_ui.py  test_compiler.py  test_etsy_api.py  test_etsy_batch_publish.py  test_etsy_client.py  test_etsy_listing.py  test_etsy_oauth_flow.py  test_etsy_seo.py  test_file_operations_utils.py  test_image_gen_improved.py  test_image_gen_workbook.py  test_image_generation.py  test_integration_old_vs_new.py  test_page_types.py  test_pdf_auditor.py  test_pdf_generation.py  test_print_profiles.py  test_progress_tracker.py  test_progress_tracker_optimized.py  test_prompt_template_service.py  test_prompt_template_service_edge_cases.py  test_provider_tokens.py  test_variation_generation_api.py  test_variations_api_endpoints.py  (+6 more)
(+132 files in other folders)
